--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "font-awesome": "^4.7.0",
+    "joi": "^14.0.1",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
+    "rc-progress": "^2.2.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.5",
+    "react-toastify": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
