--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.11",
     "rc-progress": "^2.2.6",
     "react": "^16.5.2",
+    "react-bottom-scroll-listener": "^1.3.0",
     "react-dom": "^16.5.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
